# server/docs/swagger.json
@@ -67,13 +67,14 @@
                 "operationId": "SerchSkillTag",
                 "parameters": [
                     {
-                        "description": "search tag",
-                        "name": "b",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/controller.SearchSkillTagRequest"
-                        }
+                        "type": "integer",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "tag",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -248,17 +249,6 @@
                     "type": "string"
                 },
                 "name": {
-                    "type": "string"
-                }
-            }
-        },
-        "controller.SearchSkillTagRequest": {
-            "type": "object",
-            "properties": {
-                "limit": {
-                    "type": "integer"
-                },
-                "tag": {
                     "type": "string"
                 }
             }
